TEST클래스 위치 정리