@@ -13,9 +13,10 @@ import io.namoosori.travelclub.web.service.MemberService;
 import io.namoosori.travelclub.web.service.logic.MemberServiceLogic;
 import io.namoosori.travelclub.web.service.sdo.MemberCdo;
 import io.namoosori.travelclub.web.shared.NameValueList;
-import io.namoosori.travelclub.web.store.jpastore.jpo.MemberJpo;
+import io.namoosori.travelclub.web.service.jpo.MemberJpo;
 import org.apache.commons.codec.binary.Base64;
 import org.springframework.http.*;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.util.Base64Utils;
 import org.springframework.web.client.RestTemplate;
 
@@ -27,32 +28,32 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-public class GoogleAuthentification {
+public class GoogleAuthentication {
+    //
+    private final MemberService memberService;
+    private static GoogleAuthentication googleAuthentication;
 
-    private MemberService memberService;
-    private static GoogleAuthentification googleAuthentification;
-
-    private GoogleAuthentification() {
+    private GoogleAuthentication() {
+        //
         this.memberService = MemberServiceLogic.getMemberServiceLogic();
     }
 
-    public static GoogleAuthentification getGoogleAuthentification(){
-        if (googleAuthentification == null){
-            googleAuthentification = new GoogleAuthentification();
+    public static GoogleAuthentication getGoogleAuthentication(){
+        //
+        if (googleAuthentication == null){
+            googleAuthentication = new GoogleAuthentication();
         }
-        return googleAuthentification;
+        return googleAuthentication;
     }
 
-
     public ResponseEntity<String> firstCredential(String code){
-
+        //
         RestTemplate restTemplate = new RestTemplate();
-
         String credentials = "642225847404-je5i44c2t5d6jskll3sk82nqh233ejlk.apps.googleusercontent.com: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";
         String encodedCredentials = new String(Base64.encodeBase64(credentials.getBytes()));
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         headers.add("Authorization", "Basic " + encodedCredentials);
 
         HttpEntity<String> request = new HttpEntity<>(headers);
@@ -64,16 +65,12 @@ public class GoogleAuthentification {
         return restTemplate.exchange(access_token_url, HttpMethod.POST, request, String.class);
     }
 
-    public Map<String, Object> JWTTokenDecoder(String idToken){
+    public <K, V> Map<K, V> JWTTokenDecoder(String idToken){
+        //
         DecodedJWT decodedJWT = JWT.decode(idToken);
         String payload = new String(Base64Utils.decode(decodedJWT.getPayload().getBytes(StandardCharsets.UTF_8)));
-
         Gson gson = new Gson();
-        Map<String, Object> map = gson.fromJson(payload, Map.class);
-//            for(Map.Entry<String, Object> entry : map.entrySet()){
-//                System.out.println(entry.getKey() + "=" + entry.getValue());
-//            }
-        return map;
+        return gson.fromJson(payload, Map.class);
     }
 
     public String insertUserInDB(Map<String, String> tokens) throws IOException {
@@ -92,14 +89,15 @@ public class GoogleAuthentification {
     }
 
     public String saveOrUpdate(MemberCdo memberCdo){
-        CommunityMember communityMember = memberService.findMemberByEmail(memberCdo.getEmail());
+        String email = memberCdo.getEmail();
+        CommunityMember communityMember = memberService.findMemberByEmail(email);
         if ( communityMember== null){
             return memberService.register(memberCdo);
         }else {
             NameValueList nameValueList = new NameValueList();
             nameValueList.addNameValue("name", memberCdo.getName());
             nameValueList.addNameValue("idToken", memberCdo.getIdToken());
-            if(memberCdo.getEmail().equals("nthpopuptown@gmail.com")){
+            if(email.equals("nthpopuptown@gmail.com")){
                 nameValueList.addNameValue("roles", Roles.ADMIN.getKey());
             } else{
                 nameValueList.addNameValue("roles", Roles.MEMBER.getKey());
@@ -110,11 +108,13 @@ public class GoogleAuthentification {
     }
 
     public List<String> getUserRoles(String id){
+        //
         return new MemberJpo(memberService.findMemberById(id)).getAuthorities().stream()
-                .map(role -> role.getAuthority()).collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority).collect(Collectors.toList());
     }
 
-    public Map<String, String > responseParser(ResponseEntity<String> response) throws IOException {
+    public Map<String, String> responseParser(ResponseEntity<String> response) throws IOException {
+        //
         Map<String, String> tokensMap = new HashMap<>();
         ObjectMapper mapper = new ObjectMapper();
         JsonNode node = mapper.readTree(response.getBody());
@@ -128,6 +128,7 @@ public class GoogleAuthentification {
     }
 
     public boolean adminChecker (String email) {
+        //
         return memberService.findAllByRoles(Roles.ADMIN).stream().anyMatch(admin -> admin.getEmail().equals(email));
     }
 
